<resources>
    <string name="app_name">Gzavnili</string>
    <string name="title_activity_login">LoginActivity</string>

    // splash
    <string name="text_splash">სწრაფი, იაფი \n
        და უსაფრთხო მიწოდება!</string>

    // page login
    <string name="login_label">კაბინეტში შესვლა</string>
    <string name="hint_login">ელ-ფოსტა ანკაბინეტის ნომერი</string>
    <string name="hint_password">პაროლი</string>
    <string name="text_button_sign_up">შესვლა</string>
    <string name="text_dont_have_account">არ გაქვთ ანგარიში? " "</string>
    <string name="text_sign_up_free">უფასო რეგისტრაცია</string>
    <string name="text_skip_authorization">ავტორიზაციის გარეშე</string>

    // page sign up
    <string name="hint_first_name">სახელი</string>
    <string name="hint_last_name">გვარი</string>
    <string name="hint_email">ელ-ფოსტა</string>
    <string name="hint_phone">მობილური</string>
    <string name="hint_confirm_password">პაროლი</string>
    <string name="text_btn_sign_up">ანგარიშის შექმნა</string>
    <string name="text_term_privacy_part1">ანგარიშის შექმნაზე დაწკაპებით თქვენ ეთანხმებით \n</string>
    <string name="text_term_privacy_part2">წესებს დაპირობებს</string>
    <string name="text_term_privacy_part3"> " " და " "</string>
    <string name="text_term_privacy_part4">პერსონალური მონაცემების გამოყენების პირობებს</string>

    // error
    <string name="error_first_name">მოკლე სახელი</string>
    <string name="error_last_name">მოკლე გვარი</string>
    <string name="error_email">არასწორი ელ.ფოსტა</string>
    <string name="error_phone">არასწორი ტელეფონი</string>
    <string name="error_pass">მოკლე პაროლი</string>

    // title navigation bottom
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_parcels">Parcels</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_offices">Offices</string>
    <string name="title_settings">Settings</string>
    <string name="title_more">More</string>

    // layout parcel list
    <string name="text_unpaid_parcel">UNPAID PARCEL</string>
    <string name="text_paid_parcel">PAID PARCEL</string>
    <string name="text_undeclared_parcel">UNDECLARED PARCEL</string>
    <string name="text_declared_parcel">DECLARED PARCEL</string>

    // title toolbar
    <string name="title_detail_parcel">Parcel details</string>
    <string name="title_schedule_parcel">Parcel schedule</string>

    // text in item
    <string name="text_tracking">Tracking number</string>
    <string name="text_location">Location</string>

    // text toolbar menu
    <string name="delivery_request">Delivery request</string>
    <string name="share_parcels">Share parcels</string>
    <string name="make_payment">Make payment</string>
    <string name="archive_parcels">Archive parcels</string>
    <string name="delete_parcels">Delete parcels</string>
    <string name="help">Help</string>
    <string name="clear">Clear</string>

    // text dialog share
    <string name="title_dialog">Parcel share</string>
    <string name="text_information">Please, provide receiver information</string>
    <string name="text_field_last_first_name">First and Last name</string>
    <string name="text_email_or_phone">Email or Phone</string>
    <string name="text_private_number">Private Number</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_ok">OK</string>

    // text label in detail parcel
    <string name="text_parcel_value">Parcel Value:</string>
    <string name="text_parcel_weight">Weight:</string>
    <string name="text_parcel_store">Store:</string>
    <string name="text_parcel_content">Parcel Content:</string>
    <string name="text_parcel_service_type">Service type:</string>
    <string name="text_parcel_price">Price:</string>
    <string name="text_receiver_info">Receiver information</string>
    <string name="text_first_name">First Name:</string>
    <string name="text_last_name">Last Name:</string>
    <string name="text_cell_phone">Cell Phone:</string>
    <string name="text_address">Address:</string>
    <string name="text_city">City:</string>
    <string name="text_private">Private#:</string>
    <string name="text_edit">Edit</string>
    <string name="text_done">Done</string>

    <string name="label_choose_receiver">Choose receiver</string>
    <string name="text_button_submit">Submit</string>

    // text for item offices
    <string name="text_tel">Tel</string>
    <string name="text_fax">Fax</string>
    <string name="text_email">Email</string>
    <string name="text_working_hours">Working hours</string>

    // list locations
    <string name="brooklyn">1914 Kings Highway, 2 FL Brooklyn NY</string>
    <string name="transit">In Transit</string>
    <string name="tbilisi">41 Tashkent Street Tbilisi, Georgia</string>
    <string name="out_of_delivery">Out or Delivery</string>
    <string name="receiver_address">Receiver’s Address</string>

    // title proof
    <string name="tittle_proof">Proof of Delivery</string>
    <string name="text_label_driver">Driver:</string>

    // fragment payment
    <string name="title_payment">Make Payment</string>
    <string name="text_parcel_delivery">Parcel Delivery ( + $</string>
    <string name="text_total_price">Total price:</string>
    <string name="text_button_account_funds">Account Funds</string>
    <string name="text_account_balance_payment">Account balance: $</string>

    // page settings
    <string name="text_account_details">Account details</string>
    <string name="text_settings_cell_phone">Cell Phone</string>
    <string name="text_settings_funds">Funds</string>
    <string name="text_settings_phone">Phone</string>
    <string name="text_settings_organization">Organization</string>
    <string name="text_settings_postal_code">Postal Code</string>
    <string name="text_settings_country">Country</string>
    <string name="text_settings_state">State</string>
    <string name="text_settings_city">City</string>
    <string name="text_founds">Funds</string>
    <string name="text_home_address">Home Address</string>
    <string name="text_work_address">Work Address</string>
    <string name="text_receivers">Receivers</string>
    <string name="text_app_settings">App Settings</string>
    <string name="text_help">Help</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_geolocation">Geolocation</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="text_language">Language</string>
    <string name="label_about">About</string>
    <string name="text_about">Are you looking for a faster, cheaper and safer way to ship your goods?
        Gzavnilli invites you to enjoy the fastest and safest shipping services to Georgia\nWith
        over 7 years of excellent service delivery, Gzavnilli boasts of over 20,000 active customers
        served from our 7 offices from around the globe. We have sent over 800, 000 packages
        to Georgia and did more than 140,000 Kgs of parcels sent on last year alone.\
        nIf you are looking for the best services at the best shipping rates to Georgia,
        get in touch with Gzavnilli, your trusted partner for shipping your goods from the USA
        to Georgia.\nWe guarantee the safety of your goods, speedy delivery, affordable prices and
        a variety of options to choose from depending on which service suits you most. Besides,
        we use our vehicles and license which means your goods are always in safe hands at all time.\n\n
        -7 Years of Rich Experience\n   -800,000 Packages Already Delivered\n
        -20,000 Active Customers\n\nIf you are looking to shop online too,
        we have an incredible variety of online stores from which you can buy and ship to tax-free state,
        Delaware. Our listed online stores offer fantastic discounts, deals, and coupons.
        Just choose a store, buy an item(s), use any of our office addresses and declare the parcel in
        your account using the tracking number of your order. The rest is on us!</string>
    <string name="text_follow_us">Follow Us</string>

    // page Add funds
    <string name="text_account_balance">Account Balance:</string>
    <string name="title_add_funds">Add funds</string>
    <string name="text_amount">Amount</string>

    // page calculator
    <string name="text_label_price">PRICE</string>
    <string name="text_label_arrival_day">Arrival day</string>
    <string name="text_label_weight">Weight</string>
    <string name="text_label_length">Length</string>
    <string name="text_label_height">Height</string>
    <string name="text_label_width">Width</string>
    <string name="text_label_choose_service">Choose service</string>
    <string name="text_regular_service">Regular Service</string>
    <string name="text_express_service">Express Service</string>
    <string name="text_label_parcel_type">Parcel type</string>
    <string name="text_regular_parcel">Regular Parcel</string>
    <string name="text_online_parcel">Online Parcel</string>
    <string name="text_label_ship_day">Ship day</string>
    <string name="text_mon">Mon.</string>
    <string name="text_tue">Tue.</string>
    <string name="text_wen">Wen.</string>
    <string name="text_thu">Thu.</string>
    <string name="text_fri">Fri.</string>
    <string name="text_sat">Sat.</string>
    <string name="text_sun">Sun.</string>
    <string name="text_kg">kg</string>
    <string name="text_lb">lb</string>
    <string name="text_sm">sm</string>
    <string name="text_in">in</string>

    <string name="title_receiver_list">Receivers list</string>
    <string name="title_dialog_choose_language">Choose Language</string>
    <string name="text_new_parcel">New Parcel</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_log_out">Log Out</string>
</resources>
