<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:background="@drawable/back_item_parcel"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back_item_parcel"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/title_dialog"
            android:textColor="@color/text_color_grey"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_information"
            android:textColor="@color/color_text_label_item"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_color_grey"
            android:id="@+id/edit_first_last_name"
            android:hint="@string/text_field_last_first_name"
            android:textColorHint="@color/color_text_label_item"
            android:textCursorDrawable="@drawable/cursor"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/back_for_edit_sig_up" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_color_grey"
            android:id="@+id/edit_private_number"
            android:textColorHint="@color/color_text_label_item"
            android:textCursorDrawable="@drawable/cursor"
            android:hint="@string/text_private_number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/back_for_edit_sig_up" />

        <EditText
            android:id="@+id/edit_email_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_for_edit_sig_up"
            android:hint="@string/text_email_or_phone"
            android:textColor="@color/text_color_grey"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/color_text_label_item"
            android:textCursorDrawable="@drawable/cursor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_share"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/back_for_cancel_button"
                android:text="@string/text_button_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_share_parcel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/back_for_blue_button"
                android:text="@string/text_button_ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>