<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.team.noty.gzavnili.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/logo"
        android:src="@drawable/logo_small"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#637188"
        android:gravity="center_horizontal"
        android:text="@string/login_label"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/text"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="GZ269"
        android:background="@drawable/back_for_edit"
        android:hint="@string/hint_login"
        android:layout_below="@+id/text"
        android:paddingEnd="20dp"
        android:paddingStart="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="testpass"
        android:background="@drawable/back_for_edit"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/edit_login"
        android:hint="@string/hint_password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/edit_password"
        android:background="@drawable/back_for_blue_button"
        android:text="@string/text_button_sign_up"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btn_login"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#637188"
            android:text="@string/text_dont_have_account"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/txt_sign_up"
            android:textColor="#3fa3f0"
            android:text="@string/text_sign_up_free"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_skip_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/text_skip_authorization"
        android:textColor="#3fa3f0"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/back_progress_bar"
        android:id="@+id/rel_progress"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</RelativeLayout>
